Fixed registration errors Added working profile page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,5 +40,10 @@ logging.level.org.hibernate=ERROR
 app.name=Alovoa
 app.captcha.length=8
 app.age.min=16
+app.age.max=100
+app.age.range=5
 app.token.length=30
+app.profile.image.size=5
+app.profile.image.length=800
+app.profile.description.size=255
 
