Implemented and tested searching function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,4 +46,5 @@ app.token.length=30
 app.profile.image.size=5
 app.profile.image.length=800
 app.profile.description.size=255
+app.search.max=100
 
