--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,4 +47,5 @@ app.profile.image.size=5
 app.profile.image.length=800
 app.profile.description.size=255
 app.search.max=100
+app.search.max.distance=50000
 
