Basic listing of donations in donation view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,4 +49,4 @@ app.profile.description.size=255
 app.search.max=100
 app.search.max.distance=50000
 app.message.size=255
-
+app.donate.users.max=100
