Custom login authentication with captcha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,5 @@ app.search.max=100
 app.search.max.distance=50000
 app.message.size=255
 app.donate.users.max=100
+app.url.auth.success=/profile
+app.url.auth.failure=/login?error
