Updated Spring Boot version Support for custom domain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
-server.port=8080
+server.port=${PORT:8080}
 
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -38,6 +38,7 @@ logging.level.org.hibernate=ERROR
 # custom values
 
 app.name=Alovoa
+app.domain=https://alovoa.herokuapp.com
 app.captcha.length=8
 app.age.min=16
 app.age.max=100
