Periodically remove captcha and userhide from database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 server.port=${PORT:8080}
 
@@ -44,12 +44,19 @@ app.age.min=16
 app.age.max=100
 app.age.range=5
 app.token.length=30
-app.profile.image.size=5
+app.profile.image.size=5000
 app.profile.image.length=800
 app.profile.description.size=255
 app.search.max=100
 app.search.max.distance=50000
 app.message.size=255
 app.donate.users.max=100
+
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
+
+#schedule delays in milliseconds
+#5 minutes
+app.schedule.delay.captcha=300000
+#30 days
+app.schedule.delay.hide=2592000000
