--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,9 @@ logging.level.org.hibernate=ERROR
 # custom values
 
 app.name=Alovoa
-app.domain=https://alovoa.herokuapp.com
+app.domain=http://localhost:8080
 app.captcha.length=8
+app.password-token.length=32
 app.age.min=16
 app.age.max=100
 app.age.range=5
@@ -60,3 +61,5 @@ app.url.auth.failure=/login?error
 app.schedule.delay.captcha=300000
 #30 days
 app.schedule.delay.hide=2592000000
+#5 minutes
+app.schedule.delay.password-reset=300000
