Visually show new alerts and messages Even more bug fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=${PORT:8080}
 
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -39,7 +39,7 @@ logging.level.org.hibernate=ERROR
 
 app.name=Alovoa
 app.domain=http://localhost:8080
-app.captcha.length=8
+app.captcha.length=6
 app.password-token.length=32
 app.age.min=16
 app.age.max=100
