--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 server.port=${PORT:8080}
 
@@ -52,6 +52,8 @@ app.search.max=100
 app.search.max.distance=50000
 app.message.size=255
 app.donate.users.max=100
+app.vapid.public=BC5Ur3Wq8-2djUYGD-VSXbMByIgxFFqtXoewSOYrthgxNUTOeueIHSB2b_81UT7p0By8MoFI2Bv9hrWeB8P3k2Q
+app.vapid.private=XeLZc1XZCU1mdzKJEUPi6RvyVCgkwElen9qhYZez7DI
 
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
