--- a/src/main/resources/static/manifest.json
+++ b/src/main/resources/static/manifest.json
@@ -13,9 +13,12 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/?source=pwa",
-  "background_color": "#3367D6",
+  "start_url": "/",
+  "background_color": "#3298DC",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#448AFF"
+  "theme_color": "#3298DC",
+  "description" : "Open-source dating app",
+  "orientation" : "any",
+  "lang" : "English"
 }
