Adding and removing interests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,9 @@ app.message.size=255
 app.donate.users.max=100
 app.vapid.public=BC5Ur3Wq8-2djUYGD-VSXbMByIgxFFqtXoewSOYrthgxNUTOeueIHSB2b_81UT7p0By8MoFI2Bv9hrWeB8P3k2Q
 app.vapid.private=XeLZc1XZCU1mdzKJEUPi6RvyVCgkwElen9qhYZez7DI
-
+app.interest.max=5
+app.interest.min-chars=3
+app.interest.max-chars=30
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
 
