clean up schedules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,9 +62,12 @@ app.url.auth.success=/profile
 app.url.auth.failure=/login?error
 
 #schedule delays in milliseconds
+app.schedule.delay=60000
 #5 minutes
 app.schedule.delay.captcha=300000
 #30 days
 app.schedule.delay.hide=2592000000
 #5 minutes
 app.schedule.delay.password-reset=300000
+#5 minutes
+app.schedule.delay.delete-account=300000
