User can now add and filter by interests (default max is 5) User can now add multiple images besides their profile image (default max is 4)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,7 @@ app.age.range=5
 app.token.length=30
 app.profile.image.size=5000
 app.profile.image.length=800
+app.profile.image.max=4
 app.profile.description.size=255
 app.search.max=100
 app.search.max.distance=100
