Improved lots of code under the hood Implemented simple test for registration, user settings and search Test database is now in-memory (h2)

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ build/
 target/
 attach_**
 .metadata/
+*.log
 
 ### Keys Properties ###
 application-dev.properties
 application-prod.properties
-application-test.properties
