--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 server.port=${PORT:8080}
 
@@ -28,7 +28,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone:UTC
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.springframework.web=DEBUG
@@ -46,7 +45,6 @@ app.age.min=16
 app.age.max=100
 app.age.range=5
 app.token.length=30
-app.profile.image.size=5000
 app.profile.image.length=800
 app.profile.image.max=4
 app.profile.description.size=255
