Added detailed Exceptions when registering Fixed several visual issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 server.port=${PORT:8080}
 
@@ -25,6 +25,10 @@ spring.jpa.properties.hibernate.jdbc.time_zone:UTC
 #spring.mail.port=587
 #spring.mail.username=<login user to smtp server>
 #spring.mail.password=<login password to smtp server>
+spring.mail.host=mail.gmx.net
+spring.mail.port=587
+spring.mail.username=nonononoki@gmx.de
+spring.mail.password=AD+T45FNQN53>=58EN9TGLS6G<U>H6A72S2<UJBM
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
