--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.time_zone:UTC
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 ### KEYS AND CREDENTIALS ###
 #spring.datasource.password=
@@ -21,14 +21,10 @@ spring.jpa.properties.hibernate.jdbc.time_zone:UTC
 #app.text.salt= #salt must be 16 bytes long
 #app.admin.email=
 #app.admin.key=
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=<login user to smtp server>
 #spring.mail.password=<login password to smtp server>
 spring.mail.host=mail.gmx.net
 spring.mail.port=587
 spring.mail.username=nonononoki@gmx.de
-spring.mail.password=AD+T45FNQN53>=58EN9TGLS6G<U>H6A72S2<UJBM
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -40,7 +36,6 @@ logging.level.org.hibernate=ERROR
 
 
 # custom values
-
 app.name=Alovoa
 app.domain=http://localhost:8080
 app.captcha.length=6
