--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,9 @@ logging.level.org.hibernate=ERROR
 
 
 # custom values
+app.company.name=Alovoa LLC
+app.privacy.update-date=2000-01-01
+app.tos.update-date=2000-01-01
 app.name=Alovoa
 app.domain=http://localhost:8080
 app.captcha.length=6
