--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,20 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate=ERROR
 
+#caching
+spring.cache.cache-names=bucket4j
+spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=120s
+#bucket4j
+bucket4j.enabled=true
+bucket4j.filters[0].http-response-body={ "message": "Too many requests" }
+bucket4j.filters[0].cache-name=bucket4j
+bucket4j.filters[0].url=.*
+bucket4j.filters[0].metrics.tags[0].key=IP
+bucket4j.filters[0].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
+
 
 # custom values
 app.company.name=Alovoa LLC
