--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 server.port=${PORT:8080}
 
@@ -36,18 +36,73 @@ logging.level.org.hibernate=ERROR
 
 #caching
 spring.cache.cache-names=bucket4j
-spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=120s
+spring.cache.caffeine.spec=maximumSize=1000000,expireAfterAccess=20s
 #bucket4j
 bucket4j.enabled=true
-bucket4j.filters[0].http-response-body={ "message": "Too many requests" }
+
 bucket4j.filters[0].cache-name=bucket4j
 bucket4j.filters[0].url=.*
 bucket4j.filters[0].metrics.tags[0].key=IP
 bucket4j.filters[0].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
-bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=100
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
 
+bucket4j.filters[1].cache-name=bucket4j
+bucket4j.filters[1].url=/login
+bucket4j.filters[1].metrics.tags[0].key=IP
+bucket4j.filters[1].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[1].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[1].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[1].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[2].cache-name=bucket4j
+bucket4j.filters[2].url=/delete-account-confirm
+bucket4j.filters[2].metrics.tags[0].key=IP
+bucket4j.filters[2].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[2].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[2].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[2].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[3].cache-name=bucket4j
+bucket4j.filters[3].url=/password/reset
+bucket4j.filters[3].metrics.tags[0].key=IP
+bucket4j.filters[3].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[3].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[3].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[3].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[4].cache-name=bucket4j
+bucket4j.filters[4].url=/password/change
+bucket4j.filters[4].metrics.tags[0].key=IP
+bucket4j.filters[4].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[4].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[4].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[4].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[5].cache-name=bucket4j
+bucket4j.filters[5].url=/user/like/*
+bucket4j.filters[5].metrics.tags[0].key=IP
+bucket4j.filters[5].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[5].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[5].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[5].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[6].cache-name=bucket4j
+bucket4j.filters[6].url=/search/users/*
+bucket4j.filters[6].metrics.tags[0].key=IP
+bucket4j.filters[6].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[6].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[6].rate-limits[0].bandwidths[0].time=5
+bucket4j.filters[6].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[7].cache-name=bucket4j
+bucket4j.filters[7].url=/register
+bucket4j.filters[7].metrics.tags[0].key=IP
+bucket4j.filters[7].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[7].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[7].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[7].rate-limits[0].bandwidths[0].unit=seconds
 
 # custom values
 app.company.name=Alovoa LLC
