Many major bug fixes Improved dark theme Admin area frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 server.port=${PORT:8080}
 
@@ -52,40 +52,40 @@ bucket4j.filters[1].cache-name=bucket4j
 bucket4j.filters[1].url=/login
 bucket4j.filters[1].metrics.tags[0].key=IP
 bucket4j.filters[1].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[1].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[1].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[1].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[1].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[1].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[2].cache-name=bucket4j
 bucket4j.filters[2].url=/delete-account-confirm
 bucket4j.filters[2].metrics.tags[0].key=IP
 bucket4j.filters[2].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[2].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[2].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[2].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[2].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[2].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[3].cache-name=bucket4j
 bucket4j.filters[3].url=/password/reset
 bucket4j.filters[3].metrics.tags[0].key=IP
 bucket4j.filters[3].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[3].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[3].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[3].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[3].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[3].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[4].cache-name=bucket4j
 bucket4j.filters[4].url=/password/change
 bucket4j.filters[4].metrics.tags[0].key=IP
 bucket4j.filters[4].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[4].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[4].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[4].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[4].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[4].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[5].cache-name=bucket4j
 bucket4j.filters[5].url=/user/like/*
 bucket4j.filters[5].metrics.tags[0].key=IP
 bucket4j.filters[5].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[5].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[5].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[5].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[5].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[5].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[6].cache-name=bucket4j
@@ -100,8 +100,8 @@ bucket4j.filters[7].cache-name=bucket4j
 bucket4j.filters[7].url=/register
 bucket4j.filters[7].metrics.tags[0].key=IP
 bucket4j.filters[7].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[7].rate-limits[0].bandwidths[0].capacity=1
-bucket4j.filters[7].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[7].rate-limits[0].bandwidths[0].capacity=10
+bucket4j.filters[7].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[7].rate-limits[0].bandwidths[0].unit=seconds
 
 # custom values
