--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 server.port=${PORT:8080}
 
@@ -33,6 +33,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate=ERROR
+logging.file.name=./logs/spring.log
 
 #caching
 spring.cache.cache-names=bucket4j
