--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,29 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-server.port=${PORT:8080}
+server.port=${PORT:8443}
+
+#enable to force https for development
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=alovoa.p12
+#server.ssl.key-store-password=alovoa
+#server.ssl.key-alias=alovoa
 
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+
+#Insert your oauth2 ids and secrets here
+#spring.security.oauth2.client.registration.google.client-id=<your client id>
+#spring.security.oauth2.client.registration.google.client-secret=<your client secret>
+#spring.security.oauth2.client.registration.facebook.client-id=<your client id> 
+#spring.security.oauth2.client.registration.facebook.client-secret=<your client secret>
+
+#we keep the default /login/oauth2/code/{registrationId} scheme
+
+spring.security.oauth2.client.registration.google.scope[0]=email
+spring.security.oauth2.client.registration.google.scope[1]=profile
+spring.security.oauth2.client.registration.facebook.scope[0]=email
+spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
