--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -129,7 +129,7 @@ app.company.name=Alovoa LLC
 app.privacy.update-date=2000-01-01
 app.tos.update-date=2000-01-01
 app.name=Alovoa
-app.domain=http://localhost:8080
+app.domain=https://localhost:8443
 app.captcha.length=6
 app.password-token.length=32
 app.age.min=16
