Swipe left/right like on Tinder Added support for jasypt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 server.port=${PORT:8443}
 
@@ -46,6 +46,7 @@ spring.mail.port=587
 spring.mail.username=nonononoki@gmx.de
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.test-connection=true
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
@@ -144,7 +145,7 @@ app.search.max.distance=100
 app.message.size=255
 app.donate.users.max=100
 app.vapid.public=BC5Ur3Wq8-2djUYGD-VSXbMByIgxFFqtXoewSOYrthgxNUTOeueIHSB2b_81UT7p0By8MoFI2Bv9hrWeB8P3k2Q
-app.vapid.private=XeLZc1XZCU1mdzKJEUPi6RvyVCgkwElen9qhYZez7DI
+#app.vapid.private=YOURKEYHERE
 app.interest.max=5
 app.interest.min-chars=3
 app.interest.max-chars=30
