Updated Spring version to 2.3.5 (2.4.0 still has some issues!) Messages now allow HTML tags Starting video chat will automatically send a message with the link to the partner Smaller and more elegant bubbles in notification.html and message.html Further improved UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=dev
+#only used when not configured in run configuration, dev profile always recommended to save in IDE
+spring.profiles.active=test 
 
 server.port=${PORT:8443}
 
