Added ability to upload custom audio Better performance due not loading user media if not needed

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,18 @@
 			<artifactId>bucket4j-spring-boot-starter</artifactId>
 			<version>0.2.0</version>
 		</dependency>
+		<!-- <dependency> <groupId>javax.media</groupId> <artifactId>jmf</artifactId> 
+			<version>2.1.1e</version> </dependency> -->
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>mp3spi</artifactId>
+			<version>1.9.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>vorbisspi</artifactId>
+			<version>1.0.3.3</version>
+		</dependency>
 	</dependencies>
 
 
