--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,4 @@
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
@@ -17,6 +18,8 @@ spring.security.oauth2.client.registration.facebook.client-secret=ENC(fZ/HiUqV53
 
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.com.zaxxer.hikari=TRACE
+
+app.domain=https://alovoa.herokuapp.com
 
 app.captcha.length=3
 
