--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -132,6 +132,9 @@ app.privacy.update-date=2000-01-01
 app.tos.update-date=2000-01-01
 app.name=Alovoa
 app.domain=https://localhost:8443
+
+app.audio.max-time=20 
+app.audio.max-size=2
 app.captcha.length=6
 app.password-token.length=32
 app.age.min=16
