Rebase User entities to own package! Added tons of Tests and bug fixes! Update Spring Boot to 2.4.2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExis
 
 #we keep the default /login/oauth2/code/{registrationId} scheme
 
+spring.web.locale=en_EN
+
 spring.security.oauth2.client.registration.google.scope[0]=email
 spring.security.oauth2.client.registration.google.scope[1]=profile
 spring.security.oauth2.client.registration.facebook.scope[0]=email
@@ -156,8 +158,12 @@ app.interest.max-chars=30
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
 
-#schedule delays in milliseconds
-app.schedule.delay=60000
+#schedules
+app.schedule.enabled=true
+#30 seconds
+app.schedule.short=30000
+#1 hour
+app.schedule.long=3600000
 #5 minutes
 app.schedule.delay.captcha=300000
 #30 days
