Added tons of tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -135,6 +135,8 @@ app.tos.update-date=2000-01-01
 app.name=Alovoa
 app.domain=https://localhost:8443
 
+app.ip.kofi=104.45.229.87
+
 app.audio.max-time=20 
 app.audio.max-size=2
 app.captcha.length=6
