--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -157,6 +157,7 @@ app.vapid.public=BC5Ur3Wq8-2djUYGD-VSXbMByIgxFFqtXoewSOYrthgxNUTOeueIHSB2b_81UT7
 app.interest.max=5
 app.interest.min-chars=3
 app.interest.max-chars=30
+app.donation.modulus=10
 app.url.auth.success=/profile
 app.url.auth.failure=/login?error
 
