New: Optimize all page for very small screens, KaiOS ready Added links for /login and /register, respectively Added BTC donation option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #only used when not configured in run configuration, dev profile always recommended to save in IDE
 spring.profiles.active=test 
 
-server.port=${PORT:8443}
+server.port=${PORT:8080}
 
 #enable to force https for development
 #server.ssl.key-store-type=PKCS12
@@ -133,7 +133,8 @@ app.company.name=Alovoa LLC
 app.privacy.update-date=2000-01-01
 app.tos.update-date=2000-01-01
 app.name=Alovoa
-app.domain=https://localhost:8443
+#app.domain=https://localhost:8443
+app.domain=http://localhost:8080
 
 app.ip.kofi=104.45.229.87
 
