Reduce audio file size maximum Adjust path for manifest Removed all empty Exceptions Revert back to https://localhost:8080 Uploaded images are all the same size Bug fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.profiles.active=test
 server.port=${PORT:8080}
 
 #enable to force https for development
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-store=alovoa.p12
-#server.ssl.key-store-password=alovoa
-#server.ssl.key-alias=alovoa
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=alovoa.p12
+server.ssl.key-store-password=alovoa
+server.ssl.key-alias=alovoa
 
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -133,18 +133,21 @@ app.company.name=Alovoa LLC
 app.privacy.update-date=2000-01-01
 app.tos.update-date=2000-01-01
 app.name=Alovoa
-#app.domain=https://localhost:8443
-app.domain=http://localhost:8080
+app.domain=https://localhost:8080
+#app.domain=http://localhost:8080
 
 app.ip.kofi=104.45.229.87
 
 app.audio.max-time=20 
-app.audio.max-size=2
+#in kiloBytes
+app.audio.max-size=512
 app.captcha.length=4
 app.password-token.length=32
 app.age.min=16
 app.age.max=100
 app.age.range=5
+#7 days
+app.donation.popup.time=604800000
 app.token.length=30
 app.profile.image.length=800
 app.profile.image.max=4
