--- a/src/main/resources/static/manifest/manifest-kaios.json
+++ b/src/main/resources/static/manifest/manifest-kaios.json
@@ -12,7 +12,7 @@
 	  },
 	  "developer": {
 	    "name": "Nho Quy Dinh",
-	    "url": "http://alovoa.com"
+	    "url": "https://alovoa.com"
 	  },
 	  "locales": {
 	    "en-US": {
