Improved email template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.profiles.active=test
 server.port=${PORT:8080}
 
 #enable to force https for development
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=alovoa.p12
-server.ssl.key-store-password=alovoa
-server.ssl.key-alias=alovoa
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=alovoa.p12
+#server.ssl.key-store-password=alovoa
+#server.ssl.key-alias=alovoa
 
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
