Better rate limiting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/alovoa?createDatabaseIfNotExis
 
 #we keep the default /login/oauth2/code/{registrationId} scheme
 
-spring.web.locale=en_EN
+spring.mvc.locale=en_EN
 
 spring.security.oauth2.client.registration.google.scope[0]=email
 spring.security.oauth2.client.registration.google.scope[1]=profile
@@ -76,40 +76,40 @@ bucket4j.filters[1].cache-name=bucket4j
 bucket4j.filters[1].url=/login
 bucket4j.filters[1].metrics.tags[0].key=IP
 bucket4j.filters[1].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[1].rate-limits[0].bandwidths[0].capacity=10
-bucket4j.filters[1].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[1].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[1].rate-limits[0].bandwidths[0].time=5
 bucket4j.filters[1].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[2].cache-name=bucket4j
 bucket4j.filters[2].url=/delete-account-confirm
 bucket4j.filters[2].metrics.tags[0].key=IP
 bucket4j.filters[2].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[2].rate-limits[0].bandwidths[0].capacity=10
-bucket4j.filters[2].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[2].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[2].rate-limits[0].bandwidths[0].time=5
 bucket4j.filters[2].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[3].cache-name=bucket4j
 bucket4j.filters[3].url=/password/reset
 bucket4j.filters[3].metrics.tags[0].key=IP
 bucket4j.filters[3].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[3].rate-limits[0].bandwidths[0].capacity=10
-bucket4j.filters[3].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[3].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[3].rate-limits[0].bandwidths[0].time=5
 bucket4j.filters[3].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[4].cache-name=bucket4j
 bucket4j.filters[4].url=/password/change
 bucket4j.filters[4].metrics.tags[0].key=IP
 bucket4j.filters[4].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[4].rate-limits[0].bandwidths[0].capacity=10
-bucket4j.filters[4].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[4].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[4].rate-limits[0].bandwidths[0].time=5
 bucket4j.filters[4].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[5].cache-name=bucket4j
 bucket4j.filters[5].url=/user/like/*
 bucket4j.filters[5].metrics.tags[0].key=IP
 bucket4j.filters[5].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[5].rate-limits[0].bandwidths[0].capacity=10
-bucket4j.filters[5].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[5].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[5].rate-limits[0].bandwidths[0].time=5
 bucket4j.filters[5].rate-limits[0].bandwidths[0].unit=seconds
 
 bucket4j.filters[6].cache-name=bucket4j
@@ -124,9 +124,50 @@ bucket4j.filters[7].cache-name=bucket4j
 bucket4j.filters[7].url=/register
 bucket4j.filters[7].metrics.tags[0].key=IP
 bucket4j.filters[7].metrics.tags[0].expression=getRemoteAddr()
-bucket4j.filters[7].rate-limits[0].bandwidths[0].capacity=10
-bucket4j.filters[7].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[7].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[7].rate-limits[0].bandwidths[0].time=3
 bucket4j.filters[7].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[8].cache-name=bucket4j
+bucket4j.filters[8].url=/user/delete-account-confirm
+bucket4j.filters[8].metrics.tags[0].key=IP
+bucket4j.filters[8].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[8].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[8].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[8].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[9].cache-name=bucket4j
+bucket4j.filters[9].url=/user/update/profile-picture
+bucket4j.filters[9].metrics.tags[0].key=IP
+bucket4j.filters[9].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[9].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[9].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[9].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[10].cache-name=bucket4j
+bucket4j.filters[10].url=/user/update/audio*
+bucket4j.filters[10].metrics.tags[0].key=IP
+bucket4j.filters[10].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[10].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[10].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[10].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[11].cache-name=bucket4j
+bucket4j.filters[11].url=/user/image/add
+bucket4j.filters[11].metrics.tags[0].key=IP
+bucket4j.filters[11].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[11].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[11].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[11].rate-limits[0].bandwidths[0].unit=seconds
+
+bucket4j.filters[12].cache-name=bucket4j
+bucket4j.filters[12].url=/user/report/*
+bucket4j.filters[12].metrics.tags[0].key=IP
+bucket4j.filters[12].metrics.tags[0].expression=getRemoteAddr()
+bucket4j.filters[12].rate-limits[0].bandwidths[0].capacity=1
+bucket4j.filters[12].rate-limits[0].bandwidths[0].time=3
+bucket4j.filters[12].rate-limits[0].bandwidths[0].unit=seconds
+
 
 # custom values
 app.company.name=Alovoa LLC
